--- a/views/prod_eletronicos.ejs
+++ b/views/prod_eletronicos.ejs
@@ -88,7 +88,7 @@
                     </div>
                     <div class="card-reveal">
                     <h4>'<%= item.title %>'</h4>
-                      <span class="card-title grey-text text-darken-4">'<%= item.price %>'<i class="material-icons right">close</i></span>
+                      <span class="card-title grey-text text-darken-4">'R$ <%= item.price %>'<i class="material-icons right">close</i></span>
                       <p> '<%= item.description %>'</p>
                     </div>
                     <div class="card-action">
